[~] Fixed TextImage Styling on mobile

--- a/client/src/styles/elements/TextImageElement.scss
+++ b/client/src/styles/elements/TextImageElement.scss
@@ -270,7 +270,7 @@ section.section--TextImageElement {
                 "content"
                 "links" !important;
 
-            grid-template-columns: 1fr;
+            grid-template-columns: 1fr !important;
             grid-template-rows: auto;
             padding: 0 20px;
 
